--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,34 @@
+/*
+ * main.css
+ *
+ * Copyright (C) 2014 by TADA Tadash <t@tdtds.jp>
+ * You can modify and/or distribute this under GPL.
+ */
+
+body {
+	background-color: #EBE0D6;
+}
+
+h1 {
+	font-size: medium;
+}
+
+#main {
+	margin: 0 auto;
+	max-width: 900px;
+}
+
 .box {
+	background-color: #fefefe;
 	border-style: solid;
 	border-color: #000;
 	border-width: 1px;
+	border-radius: 4px;
+	padding: 8px;
+	margin: 0.8em 0em;
+}
+
+.total-pages {
+	text-align: right;
+	font-size: small;
 }
