disable submit button until getting new list, fix #4

--- a/views/list.haml
+++ b/views/list.haml
@@ -12,7 +12,7 @@
 			#boxes
 			%form#add-isbn
 				%input#newbook{placeholder: 'ISBN'}
-				%input{type: 'submit', value: '+'}
+				%input#newbook-submit{type: 'submit', value: '+'}
 			%p.desc
 				上のISBNの欄にスキャンしたい本のISBN番号を入力し、[+]を押します。
 				少し待つと上にその本のタイトルとページ数が表示されます。
