--- a/views/list.haml
+++ b/views/list.haml
@@ -13,6 +13,7 @@
 			%form#add-isbn
 				%input#newbook{placeholder: 'ISBN'}
 				%input#newbook-submit{type: 'submit', value: '+'}
+				%span#message
 			%p.desc
 				上のISBNの欄にスキャンしたい本のISBN番号を入力し、[+]を押します。
 				少し待つと上にその本のタイトルとページ数が表示されます。
