show recent using book list on top page #3

--- a/views/index.haml
+++ b/views/index.haml
@@ -22,3 +22,6 @@
 				スタンダードプランの50冊には対応していません。
 			%form#new-list{method: 'post', action: '/'}
 				%input{type: 'submit', value: '新しいリストを作る'}
+			%p.desc
+				最近利用したリスト:
+			%ul#recent-list
