--- a/views/index.haml
+++ b/views/index.haml
@@ -3,9 +3,7 @@
 	%head
 		%meta{charset: 'UTF-8'}
 		%title BOOKSCAN Premium Optimizer
-		%script{src: '//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js'}
-		%script{src: '/js/main.js'}
-		%link{rel: 'stylesheet', href: '/css/main.css', type: 'text/css'}
+		!= stylesheet_tag 'application'
 	%body
 		%h1.top BOOKSCAN Premium Optimizer
 		#main
@@ -25,3 +23,4 @@
 			%p.desc
 				最近利用したリスト:
 			%ul#recent-list
+		!= javascript_tag 'application'
