--- a/views/list.haml
+++ b/views/list.haml
@@ -3,22 +3,17 @@
 	%head
 		%meta{charset: 'UTF-8'}
 		%title BOOKSCAN Premium Optimizer
-		!= stylesheet_tag 'application'
+		!= stylesheet_tag 'app'
 	%body{id: booklist_id}
 		%h1 BOOKSCAN Premium Optimizer
-		#main
-			#boxes
-			%form#add-isbn
-				%input#newbook{placeholder: 'ISBN'}
-				%input#newbook-submit{type: 'submit', value: '+'}
-				%span#message
-			%p.desc
-				上のISBNの欄にスキャンしたい本のISBN番号を入力し、[+]を押します。
-				少し待つと上にその本のタイトルとページ数が表示されます。
-				続いて他の本を追加しましょう。ひとつの枠に収まっている限りは、
-				プレミアム・ライトの10冊相当以内です。
-				あふれたら新しい枠が作られて、あふれた分の本が入ります。
-				リストから外したい本があれば、題名の左にある[×]を押して下さい。
-			%p.desc
-				このページをブックマークしておくと、あとで再利用できます。
-		!= javascript_tag 'application'
+		#contents
+		%p.desc
+			上のISBNの欄にスキャンしたい本のISBN番号を入力し、[+]を押します。
+			少し待つと上にその本のタイトルとページ数が表示されます。
+			続いて他の本を追加しましょう。ひとつの枠に収まっている限りは、
+			プレミアム・ライトの10冊相当以内です。
+			あふれたら新しい枠が作られて、あふれた分の本が入ります。
+			リストから外したい本があれば、題名の左にある[×]を押して下さい。
+		%p.desc
+			このページをブックマークしておくと、あとで再利用できます。
+		!= javascript_tag 'app'
