--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,7 @@
 	%head
 		%meta{charset: 'UTF-8'}
 		%title BOOKSCAN Premium Optimizer
+		%link{rel:"stylesheet", href:"/css/index.css", media:"all"}
 	%body
 		%h1.top BOOKSCAN Premium Optimizer
 		#main
@@ -22,4 +23,4 @@
 			%p.desc
 				最近利用したリスト:
 			#recent-list
-		%script{src: "/js/app.js"}
+		%script{src: "/js/index.js"}
