--- a/views/list.haml
+++ b/views/list.haml
@@ -3,6 +3,7 @@
 	%head
 		%meta{charset: 'UTF-8'}
 		%title BOOKSCAN Premium Optimizer
+		%link{rel:"stylesheet", href:"/css/list.css", media:"all"}
 	%body{id: booklist_id}
 		%h1 BOOKSCAN Premium Optimizer
 		#contents
@@ -15,4 +16,4 @@
 			リストから外したい本があれば、題名の左にある[×]を押して下さい。
 		%p.desc
 			このページをブックマークしておくと、あとで再利用できます。
-		%script{src: "/js/app.js"}
+		%script{src: "/js/list.js"}
