--- a/views/list.haml
+++ b/views/list.haml
@@ -2,18 +2,9 @@
 %html
 	%head
 		%meta{charset: 'UTF-8'}
+		%meta{name: "viewport", content: "width=device-width,initial-scale=1"}
 		%title BOOKSCAN Premium Optimizer
 		%link{rel:"stylesheet", href:"/css/list.css", media:"all"}
 	%body{id: booklist_id}
-		%h1 BOOKSCAN Premium Optimizer
 		#contents
-		%p.desc
-			上のISBNの欄にスキャンしたい本のISBN番号を入力し、[+]を押します。
-			少し待つと上にその本のタイトルとページ数が表示されます。
-			続いて他の本を追加しましょう。ひとつの枠に収まっている限りは、
-			プレミアム・ライトの10冊相当以内です。
-			あふれたら新しい枠が作られて、あふれた分の本が入ります。
-			リストから外したい本があれば、題名の左にある[×]を押して下さい。
-		%p.desc
-			このページをブックマークしておくと、あとで再利用できます。
 		%script{src: "/js/list.js"}
